welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:24: error: '=' expected but ';' found.
	if  (getX()!=6 && getY()!=6){
^SnakeBuggle:24: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if  (getX()!=6 && getY()!=6){
        ^